@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-29T01:16:04Z",
+  "timestamp" : "2023-09-29T08:21:43Z",
   "count_outdated" : 508,
   "uniques_outdated" : 242,
-  "count" : 532,
-  "uniques" : 253,
+  "count" : 533,
+  "uniques" : 254,
   "clones" : [
     {
       "timestamp": "2023-09-17T00:00:00Z",
@@ -100,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
