@@ -1,5 +1,5 @@
 {
-  "count": 24,
+  "count": 25,
   "uniques": 1,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2023-09-28T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-29T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
