@@ -1,3 +1,12 @@
+2023-09-29T08:21:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6348901579 # 818
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-29
+* notice: last 14d: unq all: 1 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 253 532
+* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 254 533
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-29]
+
 2023-09-29T01:16:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6346018314 # 817
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-29
